// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Rendering should match to snapshot - Primary: Primary button snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test label"
    primary={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        test label
      </Text>,
      "onPress": [Function],
      "style": Object {
        "alignSelf": "stretch",
        "backgroundColor": "#38ba7d",
        "borderBottomColor": "#1e6343",
        "borderBottomWidth": 6,
        "borderWidth": 1,
        "height": 45,
        "justifyContent": "center",
        "marginLeft": 15,
        "marginRight": 15,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test label",
        "style": Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 16,
          "fontWeight": "600",
        },
      },
      "ref": null,
      "rendered": "test label",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          test label
        </Text>,
        "onPress": [Function],
        "style": Object {
          "alignSelf": "stretch",
          "backgroundColor": "#38ba7d",
          "borderBottomColor": "#1e6343",
          "borderBottomWidth": 6,
          "borderWidth": 1,
          "height": 45,
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test label",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          },
        },
        "ref": null,
        "rendered": "test label",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Button Rendering should match to snapshot - Secondary: Secondary button snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test label"
    primary={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        test label
      </Text>,
      "onPress": [Function],
      "style": Array [
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#38ba7d",
          "borderBottomColor": "#1e6343",
          "borderBottomWidth": 6,
          "borderWidth": 1,
          "height": 45,
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
        },
        Object {
          "backgroundColor": "#f34541",
          "borderBottomColor": "#a43532",
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test label",
        "style": Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 16,
          "fontWeight": "600",
        },
      },
      "ref": null,
      "rendered": "test label",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          test label
        </Text>,
        "onPress": [Function],
        "style": Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#38ba7d",
            "borderBottomColor": "#1e6343",
            "borderBottomWidth": 6,
            "borderWidth": 1,
            "height": 45,
            "justifyContent": "center",
            "marginLeft": 15,
            "marginRight": 15,
          },
          Object {
            "backgroundColor": "#f34541",
            "borderBottomColor": "#a43532",
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test label",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          },
        },
        "ref": null,
        "rendered": "test label",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
